# balatro-rs

cli/: Cargo.toml
core/: Cargo.toml
core/src/: effect.rs  game.rs  generator.rs  joker.rs
pylatro/: Cargo.toml
pylatro/src/: lib.rs
