[package]
name = "pylatro"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pylatro"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
pyo3 = "0.23.1"
balatro_rs = {path = "../core/", version = "0.0.1", features = ["serde", "python"]}
bincode = "1.3"
